fixed paragraph spacing issues - too many ids, changed to classes

--- a/assets/CSS/main.css
+++ b/assets/CSS/main.css
@@ -1,7 +1,7 @@
 body {
-    background: black url(../images/new-background.jpg);
+    background: black url(../images/20x31_background.jpg);
     background-attachment: fixed;
-    background-position: bottom center;
+    background-position: center top;
     background-repeat: no-repeat;
     background-size: 100%;
     color: #ffffff;
@@ -106,10 +106,9 @@ video {
 
 #contentMiddle {
     clear: both;
-    padding: 0px;
 }
 
-#contentMiddle p {
+.contentMiddle p {
     line-height: 23px;
     margin-bottom: 15px; 
 }
@@ -129,14 +128,14 @@ video {
     height: 1px;
     background-color: #0091DA;
     border-width: 0px;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 }
-#buttonSectionTitle {
+#buttonSectionTitle, #buttonSectionTitle p {
     font-size: 20px;
     color: #ffffff;
     font-weight: bold;
     font-family: "Arial", "Helvetica Neue", helvetica, sans-serif;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
 }
 .blueButton {
     width: 200px;
@@ -144,7 +143,7 @@ video {
     background-color: #0091DA;
     color: white;
     font-family: "Arial Black", "Helvetica Neue", helvetica, sans-serif;
-    margin: 0px auto 30px auto;
+    margin: 0px auto 40px auto;
     padding: 20px 0px;
 }
 
